# MLOpsZoomcamp_LinguisticsStackExchange

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  train_model.py
data/: download.py  prepare.py
model/: prepare_serving_config.py
src/: common.py  main.py  pyproject.toml
src/data/: __init__.py  data_common.py  download.py  prepare.py
src/model/: __init__.py  prepare_mlserver_resources.py  train.py
