[project]
name = "mlopszoomcamp-linguisticsstackexchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    # "click>=8.2.1",
    "lightgbm==4.6.0",
    "lxml>=6.0.0",
    "mlflow>=3.1.4",
    "pandas>=2.3.1",
    "patool>=4.0.1",
    "prefect>=3.4.10",
    "pyunpack>=0.3",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pandas-stubs>=2.3.0.250703",
    "ruff>=0.12.5",
    "types-requests>=2.32.4.20250611",
    "types-tqdm>=4.67.0.20250516",
]


[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".ruff_cache",
    ".tox",
    ".vscode",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "RET"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+)$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.isort]
atomic = true
balanced_wrapping = true
color_output = true
multi_line_output = 5
line_length = 120
lines_after_imports = 2
skip_glob = []
use_parentheses = true


[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
# local_partial_types = true
# pretty = true
# strict_equality = true
# strict_bytes = true
warn_redundant_casts = true
# warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = []
